Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -241,6 +241,8 @@
     "state = OXOState() # uncomment to play OXO\n",
     "\n",
     "while not state.Gameover():\n",
+    "    \n",
+    "    if state.pla\n",
     "    print(4567)\n",
     "    input()"
    ]
