Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -139,14 +139,13 @@
    "source": [
     "class my_node():\n",
     "    \n",
-    "    def __init__(self,parent,state):\n",
+    "    def __init__(self,state):\n",
     "        \n",
     "        # relationship with other trees\n",
-    "        self.parent = parent\n",
     "        self.childrens    = []\n",
     "        \n",
     "        #current state of the board\n",
-    "        self.current_state = state\n",
+    "        self.current_state  = state\n",
     "        self.avaiable_moves = state.GetMoves()\n",
     "        \n",
     "        # calculate the stats\n",
