--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -128,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-28T17:48:04.163024Z",
-     "start_time": "2019-03-28T17:48:04.155060Z"
+     "end_time": "2019-03-28T17:49:34.594987Z",
+     "start_time": "2019-03-28T17:49:34.587760Z"
     }
    },
    "outputs": [],
@@ -172,31 +172,33 @@
     "        \n",
     "def my_UCT(state):\n",
     "    \n",
+    "    # 1. create the node\n",
     "    rootnode = my_node(state = state)\n",
-    "    print(rootnode)\n",
+    "    \n",
+    "    for _ in range(1):\n",
+    "        # selection\n",
+    "        print(state.GetMoves())\n",
+    "        # expandsion\n",
+    "        # simulation\n",
+    "        # back prop\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-28T17:48:04.947527Z",
-     "start_time": "2019-03-28T17:48:04.934068Z"
+     "end_time": "2019-03-28T17:49:34.886217Z",
+     "start_time": "2019-03-28T17:49:34.880253Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'rootstate' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-02b39b9c6cc1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m# start with player one\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplayerJustMoved\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[0mcurrent_move\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmy_UCT\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m         \u001b[0mcurrent_move\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmy_UCT\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-8-d422972b9690>\u001b[0m in \u001b[0;36mmy_UCT\u001b[1;34m(state)\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mmy_UCT\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m     \u001b[0mrootnode\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmy_node\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrootstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrootnode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m     \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'rootstate' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n"
      ]
     }
    ],
@@ -210,9 +212,7 @@
     "        current_move = my_UCT(state)\n",
     "    else: \n",
     "        current_move = my_UCT(state)\n",
-    "        print(67876567)\n",
-    "    print(4567)\n",
-    "    input()"
+    "    break"
    ]
   },
   {
