--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -177,6 +177,11 @@
     "    \n",
     "    for _ in range(1):\n",
     "        # selection\n",
+    "        \n",
+    "        if state.GetMoves() == []:\n",
+    "            current_node = \n",
+    "        else: \n",
+    "            current_node = rootnode.select_a_node()\n",
     "        print(state.GetMoves())\n",
     "        # expandsion\n",
     "        # simulation\n",
