Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -179,7 +179,7 @@
     "        # selection\n",
     "        \n",
     "        if state.GetMoves() == []:\n",
-    "            current_node = \n",
+    "            current_virtual_move = \n",
     "        else: \n",
     "            current_node = rootnode.select_a_node()\n",
     "        print(state.GetMoves())\n",
