--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -128,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-28T17:52:22.139397Z",
-     "start_time": "2019-03-28T17:52:22.130976Z"
+     "end_time": "2019-03-28T20:38:11.512111Z",
+     "start_time": "2019-03-28T20:38:11.502137Z"
     }
    },
    "outputs": [],
@@ -167,9 +167,8 @@
     "        pass\n",
     "    \n",
     "    def backprop(self,reward):\n",
-    "        \n",
-    "        pass\n",
-    "        \n",
+    "        self.number_visit = self.number_visit + 1\n",
+    "        self.number_wins  = self.number_wins  + reward\n",
     "        \n",
     "def my_UCT(state):\n",
     "    \n",
