Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -128,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-28T20:38:11.512111Z",
-     "start_time": "2019-03-28T20:38:11.502137Z"
+     "end_time": "2019-03-28T20:39:14.582912Z",
+     "start_time": "2019-03-28T20:39:14.571892Z"
     }
    },
    "outputs": [],
@@ -179,7 +179,10 @@
     "        \n",
     "        current_node = rootnode\n",
     "        \n",
+    "        print(current_node.avaiable_moves)\n",
+    "        \n",
     "        # selection\n",
+    "        while current_node.avaiable_moves == []\n",
     "        if state.GetMoves() == []:\n",
     "            current_node = rootnode.select_a_node()\n",
     "        else: \n",
@@ -195,11 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-28T17:52:22.402219Z",
-     "start_time": "2019-03-28T17:52:22.396933Z"
+     "end_time": "2019-03-28T20:39:14.988289Z",
+     "start_time": "2019-03-28T20:39:14.982277Z"
     }
    },
    "outputs": [
@@ -207,7 +210,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "8\n",
       "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n"
      ]
     }
