Super important commit

--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -133,7 +133,8 @@
     "ExecuteTime": {
      "end_time": "2019-03-28T20:39:14.582912Z",
      "start_time": "2019-03-28T20:39:14.571892Z"
-    }
+    },
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -177,12 +178,13 @@
     "    \n",
     "    for _ in range(1):\n",
     "        \n",
-    "        current_node = rootnode\n",
-    "        \n",
-    "        print(current_node.avaiable_moves)\n",
+    "        current_node  = rootnode\n",
+    "        current_state = state.Clone()\n",
     "        \n",
     "        # selection\n",
-    "        while current_node.avaiable_moves == []\n",
+    "        while current_node.avaiable_moves == [] and not current_node.current_state.Gameover():\n",
+    "            current_node = current_node.select_a_node\n",
+    "            state\n",
     "        if state.GetMoves() == []:\n",
     "            current_node = rootnode.select_a_node()\n",
     "        else: \n",
