Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-03-30T01:00:00.145Z"
+     "end_time": "2019-03-30T01:00:05.110759Z",
+     "start_time": "2019-03-30T01:00:00.148219Z"
     }
    },
    "outputs": [],
