Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -21,19 +21,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:01:38.621074Z",
-     "start_time": "2019-03-30T01:01:38.616041Z"
+     "end_time": "2019-03-30T01:02:24.148366Z",
+     "start_time": "2019-03-30T01:02:24.143374Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 1)\n",
+      "(1000,)\n",
+      "82.1903908407869\n"
+     ]
+    }
+   ],
    "source": [
     "# create data\n",
     "n_samples  = 1000\n",
     "n_outliers = 50\n",
-    "X, y, coef = datasets.make_regression(n_samples=n_samples, n_features=1,n_informative=1, noise=10,coef=True, random_state=0)"
+    "X, y, coef = datasets.make_regression(n_samples=n_samples, n_features=1,n_informative=1, noise=10,coef=True, random_state=0)\n",
+    "\n",
+    "print(X.shape)\n",
+    "print(y.shape)\n",
+    "print(coef)"
    ]
   },
   {
