--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:02:24.148366Z",
-     "start_time": "2019-03-30T01:02:24.143374Z"
+     "end_time": "2019-03-30T01:02:27.992076Z",
+     "start_time": "2019-03-30T01:02:27.985063Z"
     }
    },
    "outputs": [
@@ -33,17 +33,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1000, 1)\n",
-      "(1000,)\n",
-      "82.1903908407869\n"
+      "(10, 1)\n",
+      "(10,)\n",
+      "79.17250380826646\n"
      ]
     }
    ],
    "source": [
     "# create data\n",
-    "n_samples  = 1000\n",
-    "n_outliers = 50\n",
-    "X, y, coef = datasets.make_regression(n_samples=n_samples, n_features=1,n_informative=1, noise=10,coef=True, random_state=0)\n",
+    "n_samples  = 10\n",
+    "n_outliers = 5\n",
+    "X, y, coef = datasets.make_regression(n_samples=n_samples, n_features=1,n_informative=1, noise=10, random_state=0)\n",
     "\n",
     "print(X.shape)\n",
     "print(y.shape)\n",
