Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:02:27.992076Z",
-     "start_time": "2019-03-30T01:02:27.985063Z"
+     "end_time": "2019-03-30T01:04:05.427906Z",
+     "start_time": "2019-03-30T01:04:05.421924Z"
     }
    },
    "outputs": [
@@ -33,21 +33,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 1)\n",
-      "(10,)\n",
-      "79.17250380826646\n"
+      "(201,)\n"
      ]
     }
    ],
    "source": [
     "# create data\n",
-    "n_samples  = 10\n",
+    "n_samples  = 100\n",
     "n_outliers = 5\n",
-    "X, y, coef = datasets.make_regression(n_samples=n_samples, n_features=1,n_informative=1, noise=10, random_state=0)\n",
+    "x, y      = datasets.make_regression(n_samples=n_samples, n_features=1,n_informative=1, noise=10, random_state=0)\n",
+    "data      = np.append([x,y[:,None]],0)  \n",
     "\n",
-    "print(X.shape)\n",
-    "print(y.shape)\n",
-    "print(coef)"
+    "print(data.shape)\n",
+    "# plt.scatter(X,y)\n",
+    "# plt.show()"
    ]
   },
   {
