Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -21,11 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:05:08.492022Z",
-     "start_time": "2019-03-30T01:05:08.380914Z"
+     "end_time": "2019-03-30T01:07:37.287318Z",
+     "start_time": "2019-03-30T01:07:37.175635Z"
     }
    },
    "outputs": [
@@ -54,25 +54,26 @@
     "n_samples  = 100\n",
     "n_outliers = 5\n",
     "x, y      = datasets.make_regression(n_samples=n_samples, n_features=1,n_informative=1, noise=10, random_state=0)\n",
-    "data      = np.append(x,y[:,None],1)  \n",
+    "X         = np.append(x,y[:,None],1)  \n",
     "\n",
-    "print(data.shape)\n",
-    "plt.scatter(data[:,0],data[:,1]); plt.show()"
+    "print(X.shape)\n",
+    "plt.scatter(X[:,0],X[:,1]); plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:07:10.323094Z",
-     "start_time": "2019-03-30T01:07:10.319077Z"
+     "end_time": "2019-03-30T01:07:40.795838Z",
+     "start_time": "2019-03-30T01:07:40.791837Z"
     }
    },
    "outputs": [],
    "source": [
     "# simple objective\n",
-    "w = np.random.randn(2,1)"
+    "w = np.random.randn(2,1)\n",
+    "temp = X @ w"
    ]
   },
   {
