Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -62,18 +62,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:07:40.795838Z",
-     "start_time": "2019-03-30T01:07:40.791837Z"
+     "end_time": "2019-03-30T01:22:04.069817Z",
+     "start_time": "2019-03-30T01:22:04.063834Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.29337887]\n",
+      " [-0.4408575 ]]\n",
+      "[[ 0.55401218]\n",
+      " [-0.83250856]]\n"
+     ]
+    }
+   ],
    "source": [
     "# simple objective\n",
     "w = np.random.randn(2,1)\n",
-    "temp = X @ w"
+    "print(w)\n",
+    "\n",
+    "ww = w/np.sqrt((w**2).sum())\n",
+    "print(ww)"
    ]
   },
   {
