--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:22:04.069817Z",
-     "start_time": "2019-03-30T01:22:04.063834Z"
+     "end_time": "2019-03-30T01:22:55.049627Z",
+     "start_time": "2019-03-30T01:22:55.044630Z"
     }
    },
    "outputs": [
@@ -74,28 +74,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.29337887]\n",
-      " [-0.4408575 ]]\n",
-      "[[ 0.55401218]\n",
-      " [-0.83250856]]\n"
+      "[2 4]\n",
+      "[0.4472136  0.89442719]\n",
+      "1.3416407864998738\n"
      ]
     }
    ],
    "source": [
     "# simple objective\n",
     "w = np.random.randn(2,1)\n",
+    "w = np.array([2,4])\n",
     "print(w)\n",
     "\n",
     "ww = w/np.sqrt((w**2).sum())\n",
-    "print(ww)"
+    "print(ww)\n",
+    "print(ww.sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 48,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-30T01:24:18.067098Z",
+     "start_time": "2019-03-30T01:24:18.062140Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = np.array([np.sqrt(2)/2,np.sqrt(2)/2])\n",
+    "print(np.sqrt(temp**2.sum())"
+   ]
   },
   {
    "cell_type": "code",
