Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:22:55.049627Z",
-     "start_time": "2019-03-30T01:22:55.044630Z"
+     "end_time": "2019-03-30T01:26:06.932631Z",
+     "start_time": "2019-03-30T01:26:06.925657Z"
     }
    },
    "outputs": [
@@ -76,7 +76,7 @@
      "text": [
       "[2 4]\n",
       "[0.4472136  0.89442719]\n",
-      "1.3416407864998738\n"
+      "0.9999999999999999\n"
      ]
     }
    ],
@@ -88,16 +88,16 @@
     "\n",
     "ww = w/np.sqrt((w**2).sum())\n",
     "print(ww)\n",
-    "print(ww.sum())"
+    "print((ww**2).sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:24:18.067098Z",
-     "start_time": "2019-03-30T01:24:18.062140Z"
+     "end_time": "2019-03-30T01:26:00.180959Z",
+     "start_time": "2019-03-30T01:26:00.173977Z"
     }
    },
    "outputs": [
@@ -105,13 +105,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4142135623730951\n"
+      "1.4142135623730951\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0000000000000002\n",
+      "1.0000000000000002\n"
      ]
     }
    ],
    "source": [
     "temp = np.array([np.sqrt(2)/2,np.sqrt(2)/2])\n",
-    "print(np.sqrt(temp**2.sum())"
+    "print(np.sqrt(temp**2).sum())\n",
+    "print(\n",
+    "np.linalg.norm(temp)\n",
+    ")\n",
+    "print(\n",
+    "np.sqrt((temp**2).sum())\n",
+    ")\n",
+    "print(\n",
+    "temp@temp.T\n",
+    ")\n",
+    "print(\n",
+    "(temp**2).sum()\n",
+    ")"
    ]
   },
   {
