Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:34:20.838635Z",
-     "start_time": "2019-03-30T01:34:20.832617Z"
+     "end_time": "2019-03-30T01:35:19.130419Z",
+     "start_time": "2019-03-30T01:35:19.123435Z"
     }
    },
    "outputs": [
@@ -74,7 +74,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "853.8314897726764\n"
+      "853.8314897726764\n",
+      "[[ 62733.98605515]\n",
+      " [105313.32498179]]\n"
      ]
     }
    ],
@@ -83,9 +85,10 @@
     "\n",
     "\n",
     "loss = (X - X @ w @ w.T)\n",
-    "grad = X\n",
+    "grad = 2 * (X.T @ loss @ w) + 2*(w.T@X.T@loss).T\n",
     "\n",
-    "print((loss**2).mean())\n"
+    "print((loss**2).mean())\n",
+    "\n"
    ]
   },
   {
