--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:35:19.130419Z",
-     "start_time": "2019-03-30T01:35:19.123435Z"
+     "end_time": "2019-03-30T01:35:54.381273Z",
+     "start_time": "2019-03-30T01:35:54.374290Z"
     }
    },
    "outputs": [
@@ -74,18 +74,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "853.8314897726764\n",
-      "[[ 62733.98605515]\n",
-      " [105313.32498179]]\n"
+      "[[-8.41223075e+23]\n",
+      " [-5.88261332e+24]]\n",
+      "[[-1.06451823e+75]\n",
+      " [-1.29749241e+76]]\n",
+      "1.2065931066669465e+102\n"
      ]
     }
    ],
    "source": [
     "# simple objective\n",
+    "w = np.r\n",
     "\n",
-    "\n",
-    "loss = (X - X @ w @ w.T)\n",
-    "grad = 2 * (X.T @ loss @ w) + 2*(w.T@X.T@loss).T\n",
+    "for _ in range(1):\n",
+    "    loss = (X - X @ w @ w.T)\n",
+    "    grad = 2 * (X.T @ loss @ w) + 2*(w.T@X.T@loss).T\n",
+    "    \n",
+    "    print(w)\n",
+    "    w = w - 0.00008 * grad\n",
+    "    w = w / np.sqrt((w**2).sum())\n",
+    "    print(w)\n",
     "\n",
     "print((loss**2).mean())\n",
     "\n"
