--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 175,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:38:24.853885Z",
-     "start_time": "2019-03-30T01:38:24.847393Z"
+     "end_time": "2019-03-30T01:38:44.017520Z",
+     "start_time": "2019-03-30T01:38:44.010542Z"
     }
    },
    "outputs": [
@@ -74,20 +74,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current loss: 801.560139131834  Weight : [-0.89393258  0.44820146]\n"
+      "Current loss: 184.3752553199048  Weight : [ 0.41332273 -0.9105846 ]\n"
      ]
     }
    ],
    "source": [
     "# simple objective\n",
-    "# w = np.random.randn(2,1)\n",
+    "w = np.random.randn(2,1)\n",
     "\n",
     "for _ in range(1):\n",
     "    loss = (X - X @ w @ w.T)\n",
     "    grad = 2 * (X.T @ loss @ w) + 2*(w.T@X.T@loss).T\n",
     "    \n",
     "    print(\"Current loss: \" + str((loss**2).mean()) + \"  Weight : \" + str(w.ravel()))\n",
-    "    w = w - 0.00008 * grad\n",
+    "    w = w - 0.00000000008 * grad\n",
     "    w = w / np.sqrt((w**2).sum())\n",
     "\n",
     "\n"
