Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -107,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 221,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T01:42:24.681589Z",
-     "start_time": "2019-03-30T01:42:24.455646Z"
+     "end_time": "2019-03-30T01:43:58.781005Z",
+     "start_time": "2019-03-30T01:43:58.564566Z"
     }
    },
    "outputs": [
@@ -150,10 +150,48 @@
    ],
    "source": [
     "recon = (X @ w @ w.T)\n",
-    "plt.scatter(X[:,0],X[:,1]); plt.show()\n",
+    "plt.scatter(X[:,0],X[:,1]); \n",
+    "plt.show()\n",
     "plt.scatter(recon[:,0],recon[:,1]); plt.show()\n",
     "print(w)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cov = X.T @ X / "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
