--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -93,9 +93,16 @@
     "w = np.random.uniform(0,1,size=(2,1))\n",
     "w = w / np.sqrt((w**2).sum())\n",
     "\n",
+    "m = np.zeros_like(W)\n",
+    "v = np.zeros_like(W)\n",
+    "\n",
+    "\n",
     "for iter in range(1000):\n",
     "    loss = (X - X @ w @ w.T)\n",
     "    grad = 2 * (X.T @ loss @ w) + 2*(w.T@X.T@loss).T\n",
+    "    \n",
+    "    m = 0.9 * m   + (1-0.9)   * grad\n",
+    "    v = 0.999 * v + (1-0.999) * grad ** 2\n",
     "    \n",
     "    if iter%100 == 0 :\n",
     "        print(\"Current loss: \" + str((loss**2).mean()) + \"  Weight : \" + str(w.ravel()))\n",
