Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -104,9 +104,12 @@
     "    m = 0.9 * m   + (1-0.9)   * grad\n",
     "    v = 0.999 * v + (1-0.999) * grad ** 2\n",
     "    \n",
+    "    m_hat = m/(1-0.9)\n",
+    "    v_hat = v/(1-0.999)\n",
+    "    \n",
     "    if iter%100 == 0 :\n",
     "        print(\"Current loss: \" + str((loss**2).mean()) + \"  Weight : \" + str(w.ravel()))\n",
-    "    w = w - 0.00000000008 * grad\n",
+    "    w = w - 0.00000000008 * (m_hat/np.sqrt())\n",
     "    w = w / np.sqrt((w**2).sum())\n",
     "\n",
     "\n"
