--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -351,7 +351,6 @@
    "source": [
     "# simple objective\n",
     "w = np.random.uniform(0,1,size=(2,1))\n",
-    "# w = np.random.randn(2,1)\n",
     "w = w / np.sqrt((w**2).sum())\n",
     "print(w)\n",
     "m = np.zeros_like(w)\n",
@@ -379,7 +378,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "recon = (X @ w @ w.T)\n",
+    "plt.scatter(X[:,0],X[:,1]); \n",
+    "plt.show()\n",
+    "plt.scatter(recon[:,0],recon[:,1]); plt.show()\n",
+    "print(w)"
+   ]
   },
   {
    "cell_type": "code",
