Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -461,11 +461,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 151,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T02:14:18.994616Z",
-     "start_time": "2019-03-30T02:14:18.710848Z"
+     "end_time": "2019-03-30T02:16:11.235126Z",
+     "start_time": "2019-03-30T02:16:10.951373Z"
     }
    },
    "outputs": [
@@ -473,9 +473,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.95011936]\n",
-      " [0.31188652]]\n",
-      "Current loss: 825.0457590866449  Weight : [0.95011936 0.31188652]\n",
+      "[[0.89405213]\n",
+      " [0.44796294]]\n",
+      "Current loss: 724.625962392861  Weight : [0.89405213 0.44796294]\n",
       "Current loss: 0.00504240287753152  Weight : [0.02331227 0.99972823]\n",
       "Current loss: 0.00504240287753152  Weight : [0.02331227 0.99972823]\n"
      ]
@@ -534,7 +534,7 @@
     "    \n",
     "    if iter%1000 == 0 :\n",
     "        print(\"Current loss: \" + str((loss**2).mean()) + \"  Weight : \" + str(w.ravel()))\n",
-    "    w = grad\n",
+    "    w = w - grad\n",
     "    w = w / np.sqrt((w**2).sum())\n",
     "\n",
     "recon = (X @ w @ w.T)\n",
