--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -566,11 +566,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 159,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-30T02:20:44.985257Z",
-     "start_time": "2019-03-30T02:20:44.703047Z"
+     "end_time": "2019-03-30T02:23:40.587654Z",
+     "start_time": "2019-03-30T02:23:40.279046Z"
     }
    },
    "outputs": [
@@ -578,11 +578,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.10937535]\n",
-      " [0.99400052]]\n",
-      "Current loss: 6.900674527031952  Weight : [0.10937535 0.99400052]\n",
-      "Current loss: 0.005042402877531521  Weight : [5.43461752e-04 2.33059306e-02 2.33059306e-02 9.99456538e-01]\n",
-      "Current loss: 0.005042402877531521  Weight : [5.43461752e-04 2.33059306e-02 2.33059306e-02 9.99456538e-01]\n"
+      "[[0.1920877 ]\n",
+      " [0.98137776]]\n",
+      "Current loss: 26.57624362776132  Weight : [0.1920877  0.98137776]\n",
+      "Current loss: 0.005042402877531518  Weight : [0.02331227 0.99972823]\n",
+      "Current loss: 0.005042402877531518  Weight : [0.02331227 0.99972823]\n"
      ]
     },
     {
@@ -613,8 +613,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[5.43461752e-04 2.33059306e-02]\n",
-      " [2.33059306e-02 9.99456538e-01]]\n"
+      "[[0.02331227]\n",
+      " [0.99972823]]\n"
      ]
     }
    ],
@@ -629,7 +629,7 @@
     "# simple objective\n",
     "for iter in range(3000):\n",
     "    loss = (X - X @ w @ w.T)\n",
-    "    grad = -(w.T @X.T@X) - (X.T@X@w)\n",
+    "    grad = - (X.T@X@w)\n",
     "    \n",
     "    m = 0.9 * m   + (1-0.9)   * grad\n",
     "    v = 0.999 * v + (1-0.999) * grad ** 2\n",
