Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -155,7 +155,7 @@
     "\n",
     "# simple objective\n",
     "for iter in range(3000):\n",
-    "    loss = (X.T@X - X @ w @ w.T)\n",
+    "    loss = (X @ X.T - (X @ w) ** 2 )\n",
     "    grad = (X.T @ loss @ w) + (w.T@X.T@loss).T \n",
     "    \n",
     "    m = 0.9 * m   + (1-0.9)   * grad\n",
