Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -92,6 +92,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# simple objective\n",
+    "w = np.random.uniform(0,1,size=(2,2))\n",
+    "w = w / np.sqrt((w**2).sum(0))\n",
+    "print(w)\n",
+    "m = np.zeros_like(w)\n",
+    "v = np.zeros_like(w)\n",
+    "\n",
+    "# simple objective\n",
+    "for iter in range(3000):\n",
+    "    loss = X - \n",
+    "    grad = - X.T @ X @ w\n",
+    "    \n",
+    "    m = 0.9 * m   + (1-0.9)   * grad\n",
+    "    v = 0.999 * v + (1-0.999) * grad ** 2\n",
+    "    \n",
+    "    m_hat = m/(1-0.9)\n",
+    "    v_hat = v/(1-0.999)\n",
+    "    \n",
+    "    if iter%1000 == 0 :\n",
+    "        print(\"Current loss: \" + str((loss**2).mean()) + \"  Weight : \" + str(w.ravel()))\n",
+    "    w = w - 0.0000008 * (m_hat/(np.sqrt(v_hat)+1e-8))\n",
+    "    w = w / np.sqrt((w**2).sum())\n",
+    "\n",
+    "recon = (X @ w @ w.T)\n",
+    "plt.scatter(X[:,0],X[:,1]);         plt.show()\n",
+    "plt.scatter(recon[:,0],recon[:,1]); plt.show()\n",
+    "print(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 165,
    "metadata": {
     "ExecuteTime": {
