Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -99,12 +99,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 169,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-30T02:51:35.540731Z",
+     "start_time": "2019-03-30T02:51:35.524746Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.49918311]\n",
+      " [0.86649652]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (2,1) and (2,100) not aligned: 1 (dim 1) != 2 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-169-a2dbc4486448>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0miter\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mw\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m     \u001b[0mgrad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mw\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.9\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mm\u001b[0m   \u001b[1;33m+\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m0.9\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;33m*\u001b[0m \u001b[0mgrad\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (2,1) and (2,100) not aligned: 1 (dim 1) != 2 (dim 0)"
+     ]
+    }
+   ],
    "source": [
     "# simple objective\n",
-    "w = np.random.uniform(0,1,size=(2,2))\n",
+    "w = np.random.uniform(0,1,size=(2,1))\n",
     "w = w / np.sqrt((w**2).sum(0))\n",
     "print(w)\n",
     "m = np.zeros_like(w)\n",
@@ -112,8 +137,8 @@
     "\n",
     "# simple objective\n",
     "for iter in range(3000):\n",
-    "    loss = X - \n",
-    "    grad = - X.T @ X @ w\n",
+    "    loss = X - X @ w @ w.T\n",
+    "    grad = - X.T\n",
     "    \n",
     "    m = 0.9 * m   + (1-0.9)   * grad\n",
     "    v = 0.999 * v + (1-0.999) * grad ** 2\n",
