Super important commit

--- a/sandbox full of trash/PCA vai gradient/first.ipynb
+++ b/sandbox full of trash/PCA vai gradient/first.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "# simple objective\n",
     "for iter in range(3000):\n",
-    "    loss = X - X @ w @ w.T\n",
+    "    loss = np.sqrt( (X - X @ w @ w.T**2)).sum()\n",
     "    grad = - X.T\n",
     "    \n",
     "    m = 0.9 * m   + (1-0.9)   * grad\n",
