--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -57,6 +57,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T08:22:29.660164Z",
+     "start_time": "2019-04-09T08:22:29.654146Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.31482889 1.01724706]\n",
+      "[[ 1.00830698 -0.07873849]\n",
+      " [-0.07873849  0.32376897]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# traditional\n",
+    "cov = X.T @ X / X.shape[0]\n",
+    "evalue,evector = np.linalg.eigh(cov)\n",
+    "idx = \n",
+    "print(evalue)\n",
+    "print(cov)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
@@ -81,7 +110,7 @@
     "print(np.sqrt(np.sum(w**2)))\n",
     "w = w/(np.sqrt(np.sum(w**2)))\n",
     "print(np.sqrt(np.sum(w**2)))\n",
-    "print(w.shape)"
+    "print(w.shape)\n"
    ]
   },
   {
