Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -138,10 +138,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 293,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T09:21:41.758405Z",
+     "start_time": "2019-04-09T09:21:41.753419Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.94712915,  6.14636238],\n",
+       "       [ 6.14636238, 62.3800685 ]])"
+      ]
+     },
+     "execution_count": 293,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.cov(X,rowvar=False)"
+   ]
   },
   {
    "cell_type": "code",
