--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -67,7 +67,9 @@
      "end_time": "2019-04-09T09:38:04.702103Z",
      "start_time": "2019-04-09T09:38:04.373983Z"
     },
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
