Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -67,9 +67,7 @@
      "end_time": "2019-04-09T09:38:04.702103Z",
      "start_time": "2019-04-09T09:38:04.373983Z"
     },
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -116,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 378,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T09:16:54.931680Z",
-     "start_time": "2019-04-09T09:16:54.926663Z"
+     "end_time": "2019-04-09T09:54:51.667433Z",
+     "start_time": "2019-04-09T09:54:51.661448Z"
     }
    },
    "outputs": [
@@ -128,8 +126,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before :  1.052441564378402  After :  1.0\n",
-      "(2, 1)\n"
+      "Before :  1.2505211844290693  After :  1.0\n",
+      "(400, 2)\n"
      ]
     }
    ],
@@ -138,7 +136,12 @@
     "w = np.random.randn(2,1)\n",
     "print('Before : ',np.sqrt(np.sum(w**2)),end=' ')\n",
     "w = w/(np.sqrt(np.sum(w**2)))\n",
-    "print(' After : ',np.sqrt(np.sum(w**2)))\n"
+    "print(' After : ',np.sqrt(np.sum(w**2)))\n",
+    "w = (np.eye(2)-0.5 * X.T @ X ) @ w\n",
+    "w = w/(np.sqrt(np.sum(w**2)))\n",
+    "\n",
+    "projected_mine = X @ w\n",
+    "recover_mine   = projected_mine @ w.T\n"
    ]
   },
   {
