Super important commit

--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -173,15 +173,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 403,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T09:57:23.122836Z",
-     "start_time": "2019-04-09T09:57:23.117825Z"
+     "end_time": "2019-04-09T09:58:31.847895Z",
+     "start_time": "2019-04-09T09:58:31.841886Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.70627254],\n",
+       "       [ 0.70794004]])"
+      ]
+     },
+     "execution_count": 403,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 404,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T09:58:37.343998Z",
+     "start_time": "2019-04-09T09:58:37.338985Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.70710678, -0.70710678],\n",
+       "       [-0.70710678, -0.70710678]])"
+      ]
+     },
+     "execution_count": 404,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evecs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 402,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T09:58:23.597034Z",
+     "start_time": "2019-04-09T09:58:23.592033Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.allclose(recover_mine,recovered,atol=0.01))"
+   ]
   },
   {
    "cell_type": "code",
