--- a/sandbox full of trash/Linear Algebra/start and explore.ipynb
+++ b/sandbox full of trash/Linear Algebra/start and explore.ipynb
@@ -173,63 +173,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-09T09:58:31.847895Z",
      "start_time": "2019-04-09T09:58:31.841886Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.70627254],\n",
-       "       [ 0.70794004]])"
-      ]
-     },
-     "execution_count": 403,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T09:58:37.343998Z",
-     "start_time": "2019-04-09T09:58:37.338985Z"
+     "end_time": "2019-04-09T09:59:45.892706Z",
+     "start_time": "2019-04-09T09:59:45.887696Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.70710678, -0.70710678],\n",
-       "       [-0.70710678, -0.70710678]])"
-      ]
-     },
-     "execution_count": 404,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "evecs"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 411,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T09:58:23.597034Z",
-     "start_time": "2019-04-09T09:58:23.592033Z"
+     "end_time": "2019-04-09T09:59:49.870585Z",
+     "start_time": "2019-04-09T09:59:49.865597Z"
     }
    },
    "outputs": [
@@ -237,12 +209,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "True\n",
       "True\n"
      ]
     }
    ],
    "source": [
-    "print(np.allclose(recover_mine,recovered,atol=0.01))"
+    "print(np.allclose(recover_mine,recovered,atol=0.01))\n",
+    "print(np.allclose(np.sign(w)*w,np.sign(evecs[:,0])*evecs[:,0],atol=0.01))"
    ]
   },
   {
